--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ gitdb==4.0.11
 GitPython==3.1.43
 idna==3.7
 imageio==2.34.0
+iniconfig==2.0.0
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
@@ -26,12 +27,14 @@ numpy==1.26.4
 packaging==24.0
 pandas==2.2.2
 pillow==10.3.0
+pluggy==1.5.0
 protobuf==4.25.3
 pyarrow==15.0.2
 pydeck==0.8.1b0
 Pygments==2.17.2
 pyparsing==3.1.2
 pypdf==4.2.0
+pytest==8.1.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 referencing==0.34.0
@@ -44,6 +47,7 @@ seaborn==0.13.2
 six==1.16.0
 smmap==5.0.1
 streamlit==1.33.0
+streamlit-pdf-viewer==0.0.10
 tenacity==8.2.3
 tifffile==2024.2.12
 tk==0.1.0
