--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.2.1
+coverage==7.5.0
 cycler==0.12.1
 fonttools==4.51.0
 gitdb==4.0.11
@@ -35,6 +36,7 @@ Pygments==2.17.2
 pyparsing==3.1.2
 pypdf==4.2.0
 pytest==8.1.1
+pytest-cov==5.0.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 referencing==0.34.0
@@ -54,6 +56,7 @@ tk==0.1.0
 toml==0.10.2
 toolz==0.12.1
 tornado==6.4
+tqdm==4.66.2
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
