add github action specification in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -19,3 +19,11 @@ deps =
 extras = gui
 commands = 
     python -m pytest tests {posargs}
+
+[gh]
+python =
+    3.12 = py312
+    3.11 = py311, type
+    3.10 = py310
+    3.9 = py39
+    3.8 = py38
