--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ commands =
 
 [gh]
 python =
-    3.12 = py312{,-gui}
+    3.12 = py312, py312-gui
     3.11 = py311
     3.10 = py310
     3.9 = py39
