only run gui tests to save time, they include all tests

--- a/tox.ini
+++ b/tox.ini
@@ -22,8 +22,8 @@ commands =
 
 [gh]
 python =
-    3.12 = py312
+    3.12 = py312-gui
     3.11 = py311-gui
-    3.10 = py310
-    3.9 = py39
-    3.8 = py38
+    3.10 = py310-gui
+    3.9 = py39-gui
+    3.8 = py38-gui
