--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,11 +3,11 @@
 
 name: check
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: workflow_dispatch
+  # push:
+  #   branches: [ "main" ]
+  # pull_request:
+  #   branches: [ "main" ]
     
 concurrency:
   group: check-${{ github.ref }}
