--- a/.github/workflows/create_exes.yml
+++ b/.github/workflows/create_exes.yml
@@ -1,3 +1,5 @@
+name: build executables
+
 on: workflow_dispatch
   # push:
   #   branches: [ "release" ]
@@ -6,12 +8,15 @@ on: workflow_dispatch
 
 jobs:
   pyinstaller-builds:
-    runs-on: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}-latest
+    strategy:
+      matrix:
+        os: [ubuntu, macos, windows]
     steps:
       - name: Create Standalone Executable
         uses: sayyid5416/pyinstaller@v1
         with:
-          python_ver: '3.11'
-          requirements: 'requirements.txt'
-          upload_exe_with_name: "Axoden executable"
+          python_ver: "3.11"
+          requirements: "requirements.txt"
+          upload_exe_with_name: "Axoden-${{ matrix.os }}"
           options: --onefile --name "Axoden"
