--- a/.github/workflows/create_exes.yml
+++ b/.github/workflows/create_exes.yml
@@ -17,6 +17,7 @@ jobs:
         uses: sayyid5416/pyinstaller@v1
         with:
           python_ver: "3.11"
+          spec: "axoden/gui/gui_projections_quantification.py"
           requirements: "requirements.txt"
           upload_exe_with_name: "Axoden-${{ matrix.os }}"
           options: --onefile --name "Axoden"
