--- a/.github/workflows/create_exes.yml
+++ b/.github/workflows/create_exes.yml
@@ -11,10 +11,18 @@ env:
 
 jobs:
   pyinstaller-builds:
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ${{ matrix.os }}-latest
     strategy:
       matrix:
-        os: [ubuntu]
+        # os: [ubuntu]
+        include:
+          - os: ubuntu
+            file_extension: pgk
+          # - os: macos
+          #   file_extension: "Axoden.app"
+          # - os: windows
+          #   file_extension: "Axoden.exe"
         # os: [ubuntu, macos, windows]
     steps:
       - name: Create Standalone Executable
@@ -23,10 +31,13 @@ jobs:
           python_ver: "3.11"
           spec: "axoden/gui/gui_projections_quantification.py"
           requirements: "requirements.txt"
-          upload_exe_with_name: "Axoden-${{ matrix.os }}-${{ env.VERSION }}.zip"
-          options: --onefile --name "Axoden-${{ matrix.os }}-${{ env.VERSION }}.zip" --hidden-import="PIL._tkinter_finder"
+          upload_exe_with_name: "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}" # it has .pkg ending...
+          options: --onefile --name "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}" --hidden-import="PIL._tkinter_finder"
+      - name: Echo
+        run: ls -laG dist
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
+          if: startsWith(github.ref, 'refs/tags/')
           files: |
-            dist/Axoden-${{ matrix.os }}-${{ env.VERSION }}.zip
+            dist/Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}
