--- a/.github/create_executables.yml
+++ b/.github/create_executables.yml
@@ -32,12 +32,12 @@ jobs:
           spec: "axoden/gui/gui_projections_quantification.py"
           requirements: "requirements.txt"
           upload_exe_with_name: "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}" # it has .pkg ending...
-          options: --onefile --name "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}" --hidden-import="PIL._tkinter_finder"
+          options: --onefile --name "Axoden_${{ env.VERSION }}" --hidden-import="PIL._tkinter_finder"
       - name: Echo
         run: ls -laG dist
       - name: Release
         uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          if: startsWith(github.ref, 'refs/tags/')
           files: |
             dist/Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}
