--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,5 +1,7 @@
 altair==5.3.0
+altgraph==0.17.4
 attrs==23.2.0
+black==24.4.2
 blinker==1.8.2
 cachetools==5.3.3
 certifi==2024.2.2
@@ -23,16 +25,21 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.4
 mdurl==0.1.2
+mypy-extensions==1.0.0
 networkx==3.3
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.2
+pathspec==0.12.1
 pillow==10.3.0
+platformdirs==4.2.1
 pluggy==1.5.0
 protobuf==4.25.3
 pyarrow==16.0.0
 pydeck==0.9.0
 Pygments==2.18.0
+pyinstaller==6.6.0
+pyinstaller-hooks-contrib==2024.5
 pyparsing==3.1.2
 pypdf==4.2.0
 pytest==8.2.0
@@ -44,6 +51,7 @@ referencing==0.35.1
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.1
+ruff==0.4.3
 scikit-image==0.23.1
 scipy==1.13.0
 seaborn==0.13.2
