--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,10 @@
 name: Lint
 
-on:
-  push:
-    branches: [ "main", "release" ]
-  pull_request:
-    branches: [ "main", "release" ]
+on: workflow_dispatch
+  # push:
+  #   branches: [ "main", "release" ]
+  # pull_request:
+  #   branches: [ "main", "release" ]
 
 jobs:
   lint:
