--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,11 @@
 
 name: test
 
-on:
-  push:
-    branches: [ "main", "release" ]
-  pull_request:
-    branches: [ "main", "release" ]
+on: workflow_dispatch
+  # push:
+  #   branches: [ "main", "release" ]
+  # pull_request:
+  #   branches: [ "main", "release" ]
     
 concurrency:
   group: test-${{ github.ref }}
