--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,9 +1,9 @@
 name: Build Documentation
 
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
+#   push:
+#     branches:
+#       - main
 #   release:
 #     types: [created]
 
