--- a/.github/workflows/build_executables.yml
+++ b/.github/workflows/build_executables.yml
@@ -7,7 +7,7 @@ on: workflow_dispatch
   #   branches: [ "release" ]
 
 env:
-  VERSION: "v0.2.0"
+  VERSION: "v0.2.4"
 
 jobs:
   pyinstaller-builds:
@@ -21,8 +21,8 @@ jobs:
             file_extension: pgk
           # - os: macos
           #   file_extension: "app"
-          # - os: windows
-          #   file_extension: "exe"
+          - os: windows
+            file_extension: "exe"
     steps:
       - name: Create Standalone Executable
         uses: sayyid5416/pyinstaller@v1
@@ -31,7 +31,7 @@ jobs:
           spec: "axoden/gui/gui_projections_quantification.py"
           requirements: "requirements.txt"
           upload_exe_with_name: "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}" # it has .pkg ending...
-          options: --onefile --name "Axoden_${{ env.VERSION }}" --hidden-import="PIL._tkinter_finder"
+          options: --onefile --name "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}" --hidden-import="PIL._tkinter_finder"
       - name: Echo
         run: ls -laG dist
       - name: Release
