--- a/.github/workflows/build_executables.yml
+++ b/.github/workflows/build_executables.yml
@@ -9,7 +9,7 @@ on:
   #   branches: [ "release" ]
 
 env:
-  VERSION: "v0.2.6"
+  VERSION: "v0.2.7"
 
 jobs:
   pyinstaller-builds:
@@ -22,11 +22,14 @@ jobs:
         # os: [ubuntu]
         include:
           - os: ubuntu
-            file_extension: pgk
-          - os: macos
-            file_extension: "app"
-          - os: windows
-            file_extension: "exe"
+            file_extension: ""
+            options: --onefile
+          # - os: macos
+          #   file_extension: ".app"
+          #   options: --windowed
+          # - os: windows
+          #   file_extension: ".exe"
+          #   options: --windowed
     steps:
       - name: Create Standalone Executable
         uses: sayyid5416/pyinstaller@v1
@@ -34,13 +37,21 @@ jobs:
           python_ver: "3.11"
           spec: "axoden/gui/gui_projections_quantification.py"
           requirements: "requirements.txt"
-          upload_exe_with_name: "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}" # it has .pkg ending...
-          options: --onefile --name "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}" --hidden-import="PIL._tkinter_finder"
+          upload_exe_with_name: "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}"
+          options: ${{ matrix.options }} --name "Axoden_${{ env.VERSION }}_${{ matrix.os }}" --hidden-import="PIL._tkinter_finder"
+
       - name: Echo
+        run: ls -laG dist
+
+      - name: Zip executable
+        run: zip -r Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip dist/Axoden_${{ env.VERSION }}_${{ matrix.os}}${{ matrix.file_extension }}
+
+      - name: Echo
+
         run: ls -laG dist
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            dist/Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}
+            dist/Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}.zip
