--- a/.github/workflows/build_executables.yml
+++ b/.github/workflows/build_executables.yml
@@ -9,7 +9,7 @@ on:
   #   branches: [ "release" ]
 
 env:
-  VERSION: "v0.2.8"
+  VERSION: ${{ github.ref_name }}
 
 jobs:
   pyinstaller-builds:
@@ -53,4 +53,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            dist/Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}.zip
+            dist/Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip
