--- a/.github/workflows/build_executables.yml
+++ b/.github/workflows/build_executables.yml
@@ -37,17 +37,19 @@ jobs:
           python_ver: "3.11"
           spec: "axoden/gui/gui_projections_quantification.py"
           requirements: "requirements.txt"
-          upload_exe_with_name: "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}"
-          options: ${{ matrix.options }} --name "Axoden_${{ env.VERSION }}_${{ matrix.os }}" --hidden-import="PIL._tkinter_finder"
+          # upload_exe_with_name: "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}"
+          options: ${{ matrix.options }} --name "Axoden_${{ env.VERSION }}" --hidden-import="PIL._tkinter_finder"
 
-      - name: Echo
-        run: ls -laG dist
+      # - name: Echo
+      #   run: ls -laG dist
 
       - name: Zip executable
-        run: cd dist && zip -r Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip Axoden_${{ env.VERSION }}_${{ matrix.os}}${{ matrix.file_extension }}
+        if: ${{ matrix.os == 'ubuntu' }} || ${{ matrix.os == 'macos' }}
+        run: cd dist && zip -r Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip Axoden_${{ env.VERSION }}${{ matrix.file_extension }}
 
-      - name: Echo
-        run: ls -laG dist
+      # - name: Echo
+      #   run: ls -laG dist
+
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
