--- a/.github/workflows/build_executables.yml
+++ b/.github/workflows/build_executables.yml
@@ -1,12 +1,9 @@
 name: build executables
 
-on:
-  push:
-    tags:
-      - 'v*'
-  #   branches: [ "release" ]
-  # pull_request:
-  #   branches: [ "release" ]
+on: workflow_dispatch
+  # push:
+  #   tags:
+  #     - 'v*'
 
 env:
   VERSION: ${{ github.ref_name }}
@@ -31,28 +28,39 @@ jobs:
             file_extension: ".exe"
             options: --windowed
     steps:
-      - name: Create Standalone Executable
-        uses: sayyid5416/pyinstaller@v1
-        with:
-          python_ver: "3.11"
-          spec: "axoden/gui/gui_projections_quantification.py"
-          requirements: "requirements.txt"
-          # upload_exe_with_name: "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}"
-          options: ${{ matrix.options }} --name "Axoden_${{ env.VERSION }}" --hidden-import="PIL._tkinter_finder"
+      # - name: Create Standalone Executable
+      #   uses: sayyid5416/pyinstaller@v1
+      #   with:
+      #     python_ver: "3.11"
+      #     spec: "axoden/gui/gui_projections_quantification.py"
+      #     requirements: "requirements.txt"
+      #     # upload_exe_with_name: "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}"
+      #     options: ${{ matrix.options }} --distpath dist --name "Axoden_${{ env.VERSION }}" --hidden-import="PIL._tkinter_finder"
+
+      # - name: Echo
+      #   run: ls -laG dist
+      - name: Echo win
+        if: ${{ matrix.os == 'windows' }}
+        run: echo "Windows"
+      - name: Echo win mac
+        if: ${{ matrix.os == 'windows' || matrix.os == 'macos' }}
+        run: echo "Windows or mac"
+
+      - name: Echo if condition
+        run: echo ${{ matrix.os == 'windows' }}
+      - name: Echo if condition 2
+        run: echo ${{ matrix.os == 'windows' || matrix.os == 'macos' }}
+
+      # - name: Zip executable
+      #   if: ${{ matrix.os == 'ubuntu' || matrix.os == 'macos' }}
+      #   run: cd dist && zip -r Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip Axoden_${{ env.VERSION }}${{ matrix.file_extension }}
 
       # - name: Echo
       #   run: ls -laG dist
 
-      - name: Zip executable
-        if: ${{ matrix.os == 'ubuntu' }} || ${{ matrix.os == 'macos' }}
-        run: cd dist && zip -r Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip Axoden_${{ env.VERSION }}${{ matrix.file_extension }}
-
-      # - name: Echo
-      #   run: ls -laG dist
-
-      - name: Release
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            dist/Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip
+      # - name: Release
+      #   uses: softprops/action-gh-release@v2
+      #   if: startsWith(github.ref, 'refs/tags/')
+      #   with:
+      #     files: |
+      #       dist/Axoden_${{ env.VERSION }}_${{ matrix.os }}.zipo
