--- a/.github/workflows/build_executables.yml
+++ b/.github/workflows/build_executables.yml
@@ -21,12 +21,15 @@ jobs:
           # - os: ubuntu
           #   file_extension: ""
           #   options: --onefile
+          #   dir: "dist"
           # - os: macos
           #   file_extension: ".app"
           #   options: --windowed
+          #   dir: "dist"
           - os: windows
             file_extension: ".exe"
             options: --windowed
+            dir: "build"
     steps:
       - name: Create Standalone Executable
         uses: sayyid5416/pyinstaller@v1
@@ -35,25 +38,28 @@ jobs:
           spec: "axoden/gui/gui_projections_quantification.py"
           requirements: "requirements.txt"
           # upload_exe_with_name: "Axoden_${{ env.VERSION }}.${{ matrix.file_extension }}"
-          options: ${{ matrix.options }} --distpath dist --name "Axoden_${{ env.VERSION }}" --hidden-import="PIL._tkinter_finder"
+          options: ${{ matrix.options }} --name "Axoden_${{ env.VERSION }}" --hidden-import="PIL._tkinter_finder"
 
       - name: Echo
-        run: ls dist
+        run: ls ${{ matrix.dir }}
 
       - name: Zip executable
-        if: ${{ matrix.os == 'ubuntu' || matrix.os == 'macos' }}
-        run: cd dist && zip -r Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip Axoden_${{ env.VERSION }}${{ matrix.file_extension }}
+        # if: ${{ matrix.os == 'ubuntu' || matrix.os == 'macos' }}
+        run: cd ${{ matrix.dir }} && zip Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip Axoden_${{ env.VERSION }}${{ matrix.file_extension }}
+
+      - name: Echo
+        run: ls ${{ matrix.dir }}
 
       - name: Rename executable
         if: ${{ matrix.os == 'windows' }}
-        run: mv dist/Axoden_${{ env.VERSION }}.zip dist/Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip
+        run: mv ${{ matrix.dir }}/Axoden_${{ env.VERSION }}.zip ${{ matrix.dir }}/Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip
 
       - name: Echo
-        run: ls dist
+        run: ls ${{ matrix.dir }}
 
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            dist/Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip
+            ${{ matrix.dir }}/Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip
