debug windows build

--- a/.github/workflows/build_executables.yml
+++ b/.github/workflows/build_executables.yml
@@ -29,7 +29,7 @@ jobs:
           - os: windows
             file_extension: ".exe"
             options: --onefile
-            dir: "dist/Axoden_${{ github.ref_name }}"
+            dir: "dist"
     steps:
       - name: Create Standalone Executable
         uses: sayyid5416/pyinstaller@v1
@@ -43,9 +43,6 @@ jobs:
       - name: Echo 1
         run: ls ${{ matrix.dir }}
 
-      - name: Echo 2
-        run: ls dist
-
       - name: Zip executable
         if: ${{ matrix.os == 'ubuntu' || matrix.os == 'macos' }}
         run: cd ${{ matrix.dir }} && zip Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip Axoden_${{ env.VERSION }}${{ matrix.file_extension }}
@@ -53,13 +50,6 @@ jobs:
       - name: Zip executable
         if: ${{ matrix.os == 'windows' }}
         run: cd ${{ matrix.dir }} && powershell Compress-Archive Axoden_${{ env.VERSION }}${{ matrix.file_extension }} Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip
-
-      - name: Echo
-        run: ls ${{ matrix.dir }}
-
-      # - name: Rename executable
-      #   if: ${{ matrix.os == 'windows' }}
-      #   run: mv ${{ matrix.dir }}/Axoden_${{ env.VERSION }}.zip ${{ matrix.dir }}/Axoden_${{ env.VERSION }}_${{ matrix.os }}.zip
 
       - name: Echo
         run: ls ${{ matrix.dir }}
