--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,15 +1,19 @@
 name: Build Documentation
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - main
+# on:
 #   push:
-#     branches:
-#       - main
-#   release:
-#     types: [created]
+#     tags:
+#       - 'v*'
 
 jobs:
   docs:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
@@ -26,4 +30,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/build/html
-
+          publish_branch: docs
+          commit_message: "Update documentation for version ${{ github.ref_name }}"
