--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,10 @@
 name: publish
 
-on:
-  push:
-    tags:
-      - 'v*'
+on: workflow_dispatch
+# on:
+#   push:
+#     tags:
+#       - 'v*'
 
 jobs:
   publish:
