--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,12 +2,8 @@ name: Build Documentation
 
 on:
   push:
-    branches:
-      - main
-# on:
-#   push:
-#     tags:
-#       - 'v*'
+    tags:
+      - 'v*'
 
 jobs:
   docs:
