--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,10 @@ pythonpath = [
 [tool.ruff]
 line-length = 88
 indent-width = 4
-exclude = ["axoden/gui/streamlit_app/pages/2_❔️_Tutorial_&_How_To.py"]
+exclude = [
+    "axoden/gui/streamlit_app/pages/2_❔️_Tutorial_&_How_To.py",
+    "axoden/gui/streamlit_app/pages/3_📖️_Cite_Axoden.py",
+]
 
 [tool.ruff.lint]
 select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I', 'E501']
