--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,8 @@ jobs:
           - "3.8"
         os:
           - ubuntu-latest
-          - macos-latest
           - windows-latest
+          # - macos-latest
     steps:
       - uses: actions/checkout@v4
         with:
